Pre-Release 1.7.0
* Code cleanup.
* Code reformation.